# AdsGenerator

./: .gitignore  README.md  inventory_groceries.xlsx  package-lock.json
backend/: .env.example  BACKEND.md  create_excel.py  pyproject.toml  test_input.csv
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/endpoints/: __init__.py  ads.py  content.py  context.py  explanation.py  health.py  risk.py  strategy.py
backend/app/core/: config.py  firebase.py  security.py
backend/app/schemas/: ads.py  content.py  context.py  explanation.py  product.py  risk.py  strategy.py
backend/app/services/: ai_service.py  content_generator.py  context_gatherer.py  explanation_generator.py  firebase_service.py  geo_targeting.py  glm_client.py  glm_image_client.py  orchestrator.py  risk_analyser.py  strategy_decider.py
backend/test_data/: extra_columns.xlsx  mandatory_only.xlsx  messy_dates.xlsx  missing_category.xlsx  sparse_data.xlsx  standard_inventory.xlsx
backend/tests/: test_content_generator.py  test_context_gatherer.py  test_explanation_generator.py  test_glm_image_client.py  test_orchestrator.py  test_risk_analyser.py  test_strategy_decider.py
frontend/: .env.example  FRONTEND.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AdCard.jsx  GeoTargetingCard.jsx  JobIndicator.jsx  PipelineTimeline.jsx  RecommendationCard.jsx  ShapeBlob.jsx  Sidebar.jsx  StepIndicator.jsx  ThemeToggle.jsx
frontend/src/context/: JobContext.jsx  ThemeContext.jsx  jobConstants.js  jobContextInstance.js  jobHooks.js
frontend/src/contexts/: AuthContext.jsx
test_data/: invalid_date_row.xlsx  invalid_stock_value.xlsx
(+26 files in other folders)
