[project]
name = "adsgenerator-backend"
version = "0.1.0"
description = "FastAPI backend for AdsGenerator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.9",
  "openai>=1.50.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
